--- a/teacher-term-preview.html
+++ b/teacher-term-preview.html
@@ -10,7 +10,7 @@
 /* ================== GLOBAL RESET ================== */
 * {
   box-sizing: border-box;
-  max-width: 100%;
+ 
 }
 
 body {
@@ -27,6 +27,7 @@ body {
   margin: auto;
 }
 
+  
 /* ================== CONTROL PANEL ================== */
 .control-panel {
   background: #ffffff;
@@ -113,7 +114,7 @@ button.analytics:hover {
   background: #047857;
 }
 
-/* ================== REPORT CARD ================== */
+/* ================= REPORT CARD (SCREEN VIEW) ================= */
 .a4-page {
   width: 100%;
   max-width: 900px;
@@ -159,6 +160,7 @@ th, td {
 }
 
 /* ================== PRINT SAFETY ================== */
+/* ================= PRINT PROTECTION ================= */
 @media print {
 
   body {
@@ -171,11 +173,30 @@ th, td {
   }
 
   .a4-page {
-    box-shadow: none !important;
+    width: 210mm !important;
+    min-height: 297mm !important;
+    margin: 0 !important;
+    padding: 15mm !important;
     border-radius: 0 !important;
+    box-shadow: none !important;
+  }
+
+  .a4-page h3,
+  .a4-page h4 {
+    text-align: center !important;
+  }
+
+  .a4-page table {
+    width: 100% !important;
+    table-layout: auto !important;
+  }
+
+  .a4-page th,
+  .a4-page td {
+    white-space: normal !important;
+    word-break: break-word !important;
   }
 }
-
 
   </style>
 </head>
