--- a/trial.html
+++ b/trial.html
@@ -851,7 +851,8 @@ ${intelligence.schoolImprovement !== null ? `
       <ul>
         <li>Conduct targeted remediation for subjects below 2.3 mean.</li>
         <li>Organize teacher review meetings for declining performance trends.</li>
-        <li>Introduce peer tutoring for learners below expectations and Recognize and reward high-performing classes</li>
+        <li>Introduce peer tutoring and reward high-performing classes</li>
+
         
       </ul>
 
