--- a/trial.html
+++ b/trial.html
@@ -291,7 +291,22 @@ table {
 
 }
 
-  
+  /* ================= SCHOOL ANALYTICS PAGE BREAK FIX ================= */
+.school-analytics,
+.school-analytics * {
+  page-break-inside: avoid !important;
+  break-inside: avoid !important;
+}
+
+.school-analytics p,
+.school-analytics li,
+.school-analytics h3,
+.school-analytics h4,
+.school-analytics ul {
+  page-break-inside: avoid !important;
+  break-inside: avoid !important;
+}
+
 </style>
 
 
